	* Added a 'WHHttpServer::postRequestReceived()' method in
	'src/wh/whhttpserver.cpp' and 'src/wh/whhttpserver.h'.
	* Added a 'WHHttpServer::headRequestReceived()' method in
	'src/wh/whhttpserver.cpp' and 'src/wh/whhttpserver.h'.
	* Added a 'WHHttpServer::putRequestReceived()' method in
	'src/wh/whhttpserver.cpp' and 'src/wh/whhttpserver.h'.
	* Added a 'WHHttpServer::deleteRequestReceived()' method in
	'src/wh/whhttpserver.cpp' and 'src/wh/whhttpserver.h'.
2016-09-16 Fred Gleason <fredg@paravelsystems.com>
	* Updated 'README'
	* Updated 'INSTALL'
	* Updated 'NEWS'
	* Incremented the library version to 6:0:3.
	* Incremented the package version to 1.2.0.
2016-10-22 Fred Gleason <fredg@paravelsystems.com>
	* Added code to append a pseudo-random integer to rendered script URLs
	in 'diff src/wh/whcgipage.cpp'.
2016-10-22 Fred Gleason <fredg@paravelsystems.com>
	* Incremented the library version to 6:1:3.
	* Incremented the package version to 1.2.1.
2017-03-26 Fred Gleason <fredg@paravelsystems.com>
	* Added a 'WHCgiPage::renderScripts() method.
2017-03-26 Fred Gleason <fredg@paravelsystems.com>
	* Incremented the library version to 7:0:4.
	* Incremented the package version to 1.3.0.
2017-05-29 Fred Gleason <fredg@paravelsystems.com>
	* Added a 'static-link' CSS class in 'src/wh/whcgipage.cpp'.
2017-05-29 Fred Gleason <fredg@paravelsystems.com>
	* Incremented the library version to 7:1:4.
	* Incremented the package version to 1.4.0.
2018-05-27 Fred Gleason <fredg@paravelsystems.com>
	* Consolidated the 'Config' class into 'WHConfig'.
	* Added a 'UseNetworkManager=0|1' parameter to webhost.conf(5).
2018-05-28 Fred Gleason <fredg@paravelsystems.com>
	* Added a 'WHCgiPost::dhcpActive()' method.
	* Added an 'enable_dhcp' parameter to the 'WHCgiPost::sendIpCommand()'
	method.
2018-05-28 Fred Gleason <fredg@paravelsystems.com>
	* Changed the default value of 'UserNetworkManager=' in the '[Webhost]'
	section of webhost.conf(5) from 'false' to 'true'.